学习到第八章

--- a/0. Prepare.md
+++ b/0. Prepare.md
@@ -13,4 +13,26 @@ Scheme 的选择其实有很多，可以通过调试（[Simply Scheme Appendix A
 ## 安装 MIT-Scheme
 
 1. 安装
-2. 使用
+```bash
+sudo apt install mit-scheme
+```
+2. 配置教学内容（即开启自动加载 simply.scm），注意 simply.scm 需要提前调试，阅读[这里](https://people.eecs.berkeley.edu/~bh/ssch27/appendix-running.html)
+```bash
+sudo cat << EOF > ~/.scheme.init
+(load "(your-path)/simply")
+EOF
+```
+> 将 `(your-path)` 且换成你的真实路径。
+
+3. 开始使用。
+```bash
+mit-scheme
+```
+
+4. 测试一下。
+```bash
+1 ]=> (first 'hello)
+
+;Value: h
+```
+> 没有报错即为配置成功。
