--- a/5. Words and Sentences.md
+++ b/5. Words and Sentences.md
@@ -132,3 +132,35 @@
 (define (two-first-sent x)
     (word (first (first x)) (first (last x))))
 ```
+
+5.17. 编写 knight ，要求以一个名字作为参数，并返回前面带有 sir 的名字。
+```scheme
+(define (knight na)
+    (se 'sir na))
+```
+
+5.18. 尝试以下操作并解释原因。
+```scheme
+(define (ends word)
+	(word (first word) (last word)))
+> (ends 'john)
+```
+
+答：该过程的参数使用了 Scheme 的保留字，同时又想使用 word 过程。实际使用过程中，所有的 word 被替换成了 'john 导致无法找打 `john` 过程而报错。
+
+5.19. 编写 insert-and ，参数为一个句子，为句子的正确位置添加 and (也就是倒是一二两个元素之间添加 and)
+```scheme
+(define (insert-and sent)
+    (se (bl sent) 'and (last sent)))
+```
+5.20. 编写 middle-names 可以查询一个名字的中间名。
+```scheme
+(define (middle-names na)
+    (bf (bl na)))
+```
+
+5.21. 编写 query，将一个陈述句变成疑问句。
+```scheme 
+(define (query sent)
+    (se (item 2 sent) (first sent) (bl (bf (bf sent))) (word (last sent) '?)))
+```
