--- a/8. Higher-Order Functions.md
+++ b/8. Higher-Order Functions.md
@@ -22,18 +22,18 @@
 5. 特殊形式（special forms）不是程序（procedures）也是不是一类（first-class）：and、or、if、cond
 6. 理解高阶函数的想法可以通过这句话：将这个函数应用于句子中的每一个单词（"apply this function to every word of the sentence"）。
 7. 陷阱
-8. keep
-	1. keep 总是返回于参数二类型相同的结果。
-9. every
-	1. every 总是返回 _句子_。
-	2. every 会先调用第一个参数并应用给第二个参数。
-	3. every 中的 _空句_（`'()`）会被省略，但是 _空词_（`""`）会被显示。
-10. accumulate
-	1.  accumulate 如何将一个句子或字母作为参数，将会返回参数本身。
-	2. accumulate 如何只能对某些组合器使用空句子和单词：+、*、word 、sentence
-11. 布尔值不是单词，所以不能是句子的成员。
-12. Scheme 不允许特殊形式作为高阶函数的参数。
-13. 不要以为空参数的返回总是 0 或空
+	1. keep
+		1. keep 总是返回于参数二类型相同的结果。
+	2. every
+		1. every 总是返回 _句子_。
+		2. every 会先调用第一个参数并应用给第二个参数。
+		3. every 中的 _空句_（`'()`）会被省略，但是 _空词_（`""`）会被显示。
+	3. accumulate
+		1.  accumulate 如果将一个 `word` 和 `sentence` 作为参数，将会返回参数本身。
+		2. accumulate 如何只能对某些组合器使用空句子和单词：+、*、word 、sentence
+	4. 布尔值不是单词，所以不能是句子的成员。
+	5. Scheme 不允许特殊形式作为高阶函数的参数。
+	6. 不要以为空参数的返回总是 0 或空
 ```scheme
 (accumulate * '())
 ---
@@ -183,4 +183,105 @@ repeated
   (every fx '(John Paul George Ringo)))
 ```
 
-8.6. 
+8.6. 编写 words，该过程以一个单词为参数，并返回单词中的字母名称的句子。
+```scheme 
+(define (words wd)
+  (every entire-word wd))
+(define (entire-word letter)
+  (cond ((equal? letter 'a) 'alphe)
+        ((equal? letter 'b) 'bravo)
+        ((equal? letter 'c) 'charlie)))
+```
+
+8.7. 编写 letter-count，将句子作为参数，并返回句子中的字母总数。
+```scheme 
+(define (letter-count letter)
+  (accumulate + (every count letter)))
+```
+
+8.8. 编写 exaggerate，将句子表现得夸张。
+```scheme
+(define (exaggerate sent)
+  (every replace sent))
+(define (replace wd)
+  (cond ((number? wd) (* wd 2))
+        ((equal? wd 'good) 'great)
+        ((equal? wd 'bad) 'terrible)
+        (else wd)))
+```
+
+8.9. 你可以向 every 使用什么函数作为第一个参数，使第二个参数无论是什么样的句子都能原样返回?
+
+答：word 和 sentence。
+
+呢么 keep 是否可以？
+
+答：第二个参数为总是返回为真的单参数函数。
+
+呢么 accumulate 呢？
+
+答：符合参数二类型的参数一。比如
+```scheme
+(accumulate sentence '(this is a sent))
+(accumulate word 'word)
+```
+8.10. 编写 true-for-all? ，它有两个参数，一个是过程一个是句子，参数1 作用于参数2 的每个元素，如果，结果都为 true 则返回 #t 
+```scheme
+(define (true-for-all? fx sent)
+  (equal? (count sent) (count (keep fx sent))))
+```
+
+8.11. 编写 gpa，返回成绩的平均成绩点。
+```bash
+A 4
+B 3
+C 2
+D 1
+F 0
+- -0.33
++ +0.33
+0 +0
+```
+```scheme
+(define (gpa sent)
+  (/ (accumulate + (every grade-modifier sent)) (count sent)))
+(define (base-grade grade)
+  (cond ((equal? grade 'A) 4)
+        ((equal? grade 'B) 3)
+        ((equal? grade 'C) 2)
+        ((equal? grade 'D) 1)
+        ((equal? grade 'F) 0)))
+(define (grade-modifier grade)
+  (+ (base-grade (first grade)) (cond ((member? '+ grade) 0.33)
+                      ((member? '- grade) (- 0.33))
+                      (else 0))))
+```
+8.12. 编写 count-ums 统计 um 的此时。
+```scheme
+(define (count-ums sent)
+  (count (keep is-um? sent)))
+(define (is-um? wd)
+  (equal? 'um wd))
+```
+
+8.13. 编写 phone-unspell 
+```scheme
+(define (phone-unspell wd)
+  (accumulate + (every unspell-letter wd)))
+(define (unspell-letter letter)
+  (cond ((member? letter 'abc) 2)
+        ((member? letter 'def) 3)
+        ((member? letter 'ghi) 4)
+        ((member? letter 'jkl) 5)
+        ((member? letter 'mno) 6)
+        ((member? letter 'prs) 7)
+        ((member? letter 'tuv) 8)
+        ((member? letter 'wxy) 9)
+        (else 0)))
+```
+
+8.14. 编写 subword，它有 3 个参数，一个单词，一个开始编号，一个结束编号，返回中间的值。
+```scheme
+(define (subword wd start end)
+  ((repeated bf (- start 1)) ((repeated bl (- (count wd) end)) wd)))
+```
