--- a/14.Common Patterns in Recursive Procedures.md
+++ b/14.Common Patterns in Recursive Procedures.md
@@ -10,5 +10,157 @@
 		1. 有 3 中可能的结果
 	3. accumulate 模式，聚合。
 		1. 基本情况返回的值必须符合组合结果的组合器。比如，求一个由数组成的句子的和，基本情况需要符合 `求和` 返回一个数。
-4. 不是试图迷恋模型，需要理解模型的一般性原理，并理解递归的通用性。
-5. 
+	4. 组合模式：将以上的基本模式复合使用，比如求某个 sent 中的所有数字的和，用 keep 来筛选数字，并用 accumulate 来求和。
+	5. helper 程序：当递归参数需要多于函数传递参数时，可以使用 helper 来进行主要的函数处理，主程序进行调用。如果在每一步都需要完整的原始参数以及更接近基本情况的参数，则可能需要一个帮助器过程。
+5. 如何使用模型：可以将模型看作一个填空题。
+6. 不遵循模式的问题：
+	1. sent-before?: 接受两个句子参数，第一个参数在语义上在第二个参数之前吗？如果是返回 #t
+		1. 他不是 every, 因为 every 会转换句子中的每一个单词，并返回句子。
+		2. 他不是 keep，因为 keep 会筛选保留一部分单词，并返回句子。
+		3. 他不是 accumulate, 在典型的 accumulate 中，每一个单词都有助于就成结果。
+7. 如何对待模型：
+	1. 不是试图迷恋模型，需要理解模型的一般性原理，并理解递归的通用性。
+	2. 模型是解决许多常见问题的捷径，但是不要以牺牲通用技术为代价来学习捷径。
+8. 值得注意的是；
+	1. 一个严重的缺陷是没有认识到需要一个额外的变量，因此需要一个助手过程的情况。
+	2. 在使用helper过程时，一个简单的陷阱是在helper中编写一个递归调用来调用main过程，而不是调用helper。
+	3. 一些具有多个参数的递归过程需要多个基本情况。
+	4. 一个陷阱是遗漏了一个必要的基本情况;
+	5. 陷阱是包含了一些看起来像基本情况但不适合程序结构的东西。
+
+## Exerises
+14.1. remove-once (keep 模型)
+```scheme 
+(define (remove-once wd sent)
+  (if (empty? sent)
+      '()
+      (if (equal? wd (first sent))
+          (remove-once wd (bf sent))
+          (se (first sent) (remove-once wd (bf sent))))))
+
+```
+14.2. up （every 模型)
+```scheme 
+(define (up wd)
+  (if (empty? wd)
+      '()
+      (se (up (bl wd)) wd)))
+
+```
+14.3. remdup （helper 模型）
+```scheme
+(define (remdup sent)
+  (remdup-helper sent '()))
+(define (remdup-helper sent1 sent2)
+  (if (empty? sent1)
+      '()
+      (if (member? (first sent1) sent2)
+          (remdup-helper (bf sent1) sent2)
+          (se (first sent1) (remdup-helper (bf sent1) (se (first sent1) sent2))))))
+```
+14.4. odds (helper 模型)
+```scheme 
+(define (odds sent)
+  (odds-helper 2 2 sent))
+(define (odds-helper num cou sent)
+  (if (empty? sent)
+      '()
+      (if (= cou 1)
+          (odds-helper num num (bf sent))
+          (se (first sent) (odds-helper num (- cou 1) (bf sent))))))
+
+```
+14.5. letter-count （accumulate 模型)
+```scheme 
+(define (letter-count sent)
+  (if (empty? sent)
+      0
+      (+ (count (first sent)) (letter-count (bf sent)))))
+```
+14.6. member?  (every 和 accumulate 混合模型)
+```scheme 
+(define (member? wl ws)
+  (if (empty? ws)
+      #f
+      (or (equal? wl (first ws)) (member? wl (bf ws)))))
+```
+14.7. differences (every 和 accumulate 混合模型)
+```scheme 
+(define (differences sent)
+  (if (< (count sent) 2)
+      '()
+      (se (- (first (bf sent)) (first sent)) (differences (bf sent)))))
+```
+14.8. expand （keep/helper/every 混合模型)
+```scheme 
+(define (expand sent)
+  (if (< (count sent) 2)
+      '()
+      (if (number? (first sent))
+          (se (expand-helper (first sent) (first (bf sent))) 
+              (expand (bf sent)))
+          (se (first sent) (expand (bf sent))))))
+(define (expand-helper num wd)
+  (if (= num 0)
+      '()
+      (se wd (expand-helper (- num 1) wd))))
+```
+14.9. location (helper)
+```scheme 
+(define (location wd sent)
+  (location-helper wd sent 1))
+(define (location-helper wd sent num)
+  (if (empty? sent) 
+      #f
+      (if (equal? wd (first sent))
+          num
+          (location-helper wd (bf sent) (+ num 1)))))
+```
+14.10. count-adjacent-duplicates (accumulate/keep 混合模型 )
+```scheme
+(define (count-adjacent-duplicates sent)
+  (if (< (count sent) 2)
+      0
+      (if (equal? (first sent) (first (bf sent)))
+          (+ 1 (count-adjacent-duplicates (bf sent)))
+          (+ 0 (count-adjacent-duplicates (bf sent))))))
+```
+14.11. remove-adjacent-duplicates (keep)
+```scheme 
+(define (remove-adjacent-duplicates sent)
+  (if (< (count sent) 2)
+      '()
+      (if (equal? (first sent) (first (bf sent)))
+          (se (first sent) (remove-adjacent-duplicates (bf (bf sent))))
+          (se (first sent) (remove-adjacent-duplicates (bf sent))))))
+```
+14.12. progressice-squares? (accumulate/keep 模型)
+```scheme
+(define (progressive-squares? sent)
+  (if (< (count sent) 2)
+      #t
+      (if (= (expt (first sent) 2) (first (bf sent)))
+          (and #t (progressive-squares? (bf sent)))
+          #f)))
+```
+14.13. 修改pigl (类 keep/helper 模型)
+```scheme 
+(define (pigl wd)
+  (pigl-helper wd (count wd) wd))
+(define (pigl-helper wd num origin)
+  (if (<= num 0)
+      (word origin 'ay)
+      (if (member? (first wd) 'aeiou) 
+          (word wd 'ay)
+          (pigl-helper (bf wd) (- num 1) origin))))
+```
+14.14. same-shape? (类 every/accumulate 模型)
+```scheme
+(define (same-shape? sent1 sent2)
+    (if (and (= (count sent1) (count sent2))
+             (or (empty? sent1) (empty? sent2)))
+        #t
+        (if (= (count (first sent1)) (count (first sent2)))
+            (and #t (same-shape? (bf sent1) (bf sent2)))
+            #f)))
+```
