到 number-name 项目

--- a/14.Common Patterns in Recursive Procedures.md
+++ b/14.Common Patterns in Recursive Procedures.md
@@ -47,7 +47,7 @@
       (se (up (bl wd)) wd)))
 
 ```
-14.3. remdup （helper 模型）
+14.3. remdup （helper/keep 模型）
 ```scheme
 (define (remdup sent)
   (remdup-helper sent '()))
@@ -58,7 +58,7 @@
           (remdup-helper (bf sent1) sent2)
           (se (first sent1) (remdup-helper (bf sent1) (se (first sent1) sent2))))))
 ```
-14.4. odds (helper 模型)
+14.4. odds (helper/keep 模型)
 ```scheme 
 (define (odds sent)
   (odds-helper 2 2 sent))
@@ -105,7 +105,7 @@
       '()
       (se wd (expand-helper (- num 1) wd))))
 ```
-14.9. location (helper)
+14.9. location (helper/keep 混合模型)
 ```scheme 
 (define (location wd sent)
   (location-helper wd sent 1))
@@ -125,7 +125,7 @@
           (+ 1 (count-adjacent-duplicates (bf sent)))
           (+ 0 (count-adjacent-duplicates (bf sent))))))
 ```
-14.11. remove-adjacent-duplicates (keep)
+14.11. remove-adjacent-duplicates (类 keep 模型)
 ```scheme 
 (define (remove-adjacent-duplicates sent)
   (if (< (count sent) 2)
@@ -163,4 +163,30 @@
         (if (= (count (first sent1)) (count (first sent2)))
             (and #t (same-shape? (bf sent1) (bf sent2)))
             #f)))
+```
+14.15. merge (accumulate/keep 类混合模型)
+```scheme
+(define (merge sent1 sent2)
+  (cond ((empty? sent1) sent2)
+        ((empty? sent2) sent1)
+        ((and (empty? sent1) (empty? sent2)) '())
+        ((< (first sent1) (first sent2)) (se (first sent1) (merge (bf sent1) sent2)))
+        ((< (first sent2) (first sent1)) (se (first sent2) (merge sent1 (bf sent2))))))
+```
+> 注意，accumulate 会生产一个新句子，而不需要传入一个储存盒子或是，放入其中一个句子中。即最后生产的句子是两个句子的组合，而不是将其中某个句子进行修改得到的。
+> 其次，两个句子的 first 比较后，存入其中小的一个，而不是将两个一同保存。
+```scheme 
+(se (first sent1) (frist sent2) (merge (bf sent1) (bf sent2))); 错误。
+(se (first sent1) (merge (bf sent1) sent)); 
+```
+14.16. syllables （类 keep 模型)
+```scheme 
+(define (syllables wd)
+  (if (< (count wd) 2)
+      (if (vowel? wd) 1 0)
+      (if (and (vowel? (first wd)) (not (vowel? (first (bf wd)))))
+          (+ 1 (syllables (bf wd)))
+          (+ 0 (syllables (bf wd))))))
+(define (vowel? letter)
+  (member? letter 'aeiou))
 ```
